--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -37,7 +37,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  padding:10px;
+  padding: 10px;
 }
 
 /* Make images easier to work with */
@@ -57,7 +57,8 @@ select {
 #root {
   display: grid;
   grid-template-columns: 300px 1fr;
-  font-family: sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 h1,
@@ -73,6 +74,16 @@ h2 {
 
 .light-shadow {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 3px 9px rgba(0, 0, 0, 0.08);
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .contacts-section {
@@ -96,15 +107,68 @@ h2 {
   border-top: 1px solid #cbcbcb;
 }
 
+/* WRAPPER */
 .contacts-list {
-  max-width: 400px;
+  /* max-width: 400px; */
+  display: flex;
+  gap: 2rem;
 }
 
-.contacts-list > li {
-  padding: 1rem 0;
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 1rem;
+/* CARD */
+.contact-card {
+  display: flex;
+  flex-flow: column;
+
+  width: 200px;
+  padding: 1rem;
+  z-index: 1;
+
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: 10px 10px 40px #b3b3b3, -10px -10px 40px #ffffff;
+
+  transition: ease scale 0.2s;
+}
+.contact-card:hover {
+  z-index: 1;
+  scale: 1.05;
+}
+.contact-card h3 {
+  text-align: center;
+  color: #1b1b1b;
+  margin-bottom: 1rem;
+  /* background-color: #add6ce; */
+  border-radius: 50px 50px 0 0;
+}
+.contact-card span {
+  color: #868686;
+}
+.contact-card p {
+  color: #1b1b1b;
+  font-weight: bold;
+}
+.contact-card p:last-of-type {
+  margin-bottom: 1rem;
+}
+.contact-card button {
+  margin-top: auto;
+
+  height: 50px;
+  width: 100%;
+
+  border: 0;
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: inset 10px 10px 40px #b3b3b3, inset -10px -10px 40px #ffffff;
+
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) filter 1s;
+}
+.contact-card button:hover {
+  filter: brightness(92%);
+  cursor: pointer;
+}
+.contact-card button:active {
+  filter: brightness(88%);
 }
 
 /* VIEW SECTION */
