--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -38,6 +38,8 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   padding: 10px;
+
+  background-color: #e1e1e1;
 }
 
 /* Make images easier to work with */
@@ -179,6 +181,63 @@ h2 {
 }
 .contact-card button:active {
   filter: brightness(88%);
+}
+
+/* ADD CARD */
+.contact-card-add {
+  display: flex;
+  flex-flow: column;
+  box-sizing: border-box;
+
+  color: #cbcbcb;
+  font-size: 50px;
+  scale: 0.8;
+
+  z-index: 1;
+
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: 0 0 0 #bebebe, 0 0 0 #ffffff;
+
+  /* HOVER OFF, no delay*/
+  transition: ease-in box-shadow 0.2s, ease filter 0.1s;
+}
+.contact-card-add:hover {
+  z-index: 1;
+
+  box-shadow: 11px 11px 50px #bebebe, -11px -11px 50px #ffffff;
+  /* HOVER ON, add delay */
+  transition: ease-out box-shadow 0.2s 0.2s, ease filter 0.1s;
+}
+.contact-card-add:active {
+  filter: brightness(92%);
+}
+.contact-card-add .inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  height: 100%;
+  width: 100%;
+
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: inset 20px 20px 60px #bebebe, inset -20px -20px 60px #ffffff;
+
+  /* HOVER OFF, add delay */
+  transition: ease-out box-shadow 0.2s 0.2s;
+}
+.contact-card-add:hover .inner {
+  box-shadow: inset 0 0 0 #bebebe, inset 0 0 0 #ffffff;
+
+  /* HOVER ON, no delay */
+  transition: ease-in box-shadow 0.2s;
+}
+.contact-card-add .inner h2 {
+  transition: ease scale 0.5s;
+}
+.contact-card-add:hover .inner h2 {
+  scale: 1.4;
 }
 
 /* VIEW SECTION */
