--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,45 +7,20 @@
   box-sizing: border-box;
 }
 
-/* Remove default padding */
-ul[class],
-ol[class] {
-  padding: 0;
-}
-
-ul {
-  padding: 0;
-  list-style-type: none;
-}
-
-/* Remove default margin */
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-ul[class],
-ol[class],
-li {
-  margin: 0;
-}
-
 /* Set core body defaults */
 body {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
+
   line-height: 1.5;
+
   padding: 10px;
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
   background-color: #e1e1e1;
-}
-
-/* Make images easier to work with */
-img {
-  max-width: 100%;
-  display: block;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -58,24 +33,7 @@ select {
 
 #root {
   display: grid;
-  grid-template-columns: 300px 1fr;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-h1,
-h2 {
-  margin-bottom: 0.5rem;
-}
-
-.center {
-  max-width: 400px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.light-shadow {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 3px 9px rgba(0, 0, 0, 0.08);
+  grid-template-columns: auto 1fr;
 }
 
 .noselect {
@@ -109,7 +67,7 @@ h2 {
   border-top: 1px solid #cbcbcb;
 }
 
-/* WRAPPER */
+/* WRAPPER CARD */
 .contacts-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, 200px);
@@ -120,7 +78,6 @@ h2 {
 .contact-card {
   display: flex;
   flex-flow: column;
-  box-sizing: border-box;
 
   width: 200px;
   padding: 1rem;
@@ -136,25 +93,34 @@ h2 {
   z-index: 1;
   scale: 1.05;
 }
+/* CARD - PERSON NAME */
 .contact-card h3 {
   text-align: center;
   color: #1b1b1b;
+
+  margin: 0;
   margin-bottom: 1rem;
   border-radius: 50px 50px 0 0;
 
   padding: 0 10px;
 
+  /* Ellipsis overflow */
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
+/* CARD - LABELS */
 .contact-card span {
   color: #868686;
 }
+/* CARD - PERSON DETAILS */
 .contact-card p {
   color: #1b1b1b;
   font-weight: bold;
 
+  margin: 0;
+
+  /* Ellipsis overflow */
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
@@ -162,11 +128,13 @@ h2 {
 .contact-card p:last-of-type {
   margin-bottom: 1rem;
 }
+/* CARD - BUTTON */
 .contact-card button {
   margin-top: auto;
 
   height: 50px;
   width: 100%;
+  color: #1b1b1b;
 
   border: 0;
   border-radius: 50px;
@@ -186,14 +154,12 @@ h2 {
 /* ADD CARD */
 .contact-card-add {
   display: flex;
-  flex-flow: column;
-  box-sizing: border-box;
 
   color: #cbcbcb;
   font-size: 50px;
   scale: 0.8;
 
-  z-index: 1;
+  min-height: 250px;
 
   border-radius: 50px;
   background: #e0e0e0;
@@ -203,8 +169,6 @@ h2 {
   transition: ease-in box-shadow 0.2s, ease filter 0.1s;
 }
 .contact-card-add:hover {
-  z-index: 1;
-
   box-shadow: 11px 11px 50px #bebebe, -11px -11px 50px #ffffff;
   /* HOVER ON, add delay */
   transition: ease-out box-shadow 0.2s 0.2s, ease filter 0.1s;
@@ -212,6 +176,7 @@ h2 {
 .contact-card-add:active {
   filter: brightness(92%);
 }
+/* ADD CARD - INNER EFFECT DIV */
 .contact-card-add .inner {
   display: flex;
   align-items: center;
@@ -233,7 +198,9 @@ h2 {
   /* HOVER ON, no delay */
   transition: ease-in box-shadow 0.2s;
 }
+/* ADD CARD - H2 PLUS */
 .contact-card-add .inner h2 {
+  margin: 0;
   transition: ease scale 0.5s;
 }
 .contact-card-add:hover .inner h2 {
