--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -31,12 +31,12 @@ select {
   font: inherit;
 }
 
-#root {
-  display: grid;
-  grid-template-columns: auto 1fr;
+.link {
+  text-decoration: none;
 }
 
 .noselect {
+  -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
@@ -44,6 +44,11 @@ select {
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
+}
+
+#root {
+  display: grid;
+  grid-template-columns: auto 1fr;
 }
 
 .contacts-section {
@@ -182,7 +187,8 @@ select {
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  height: 100%;
+
+  /* height: 100%; */
   width: 100%;
 
   border-radius: 50px;
