--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,12 +14,15 @@ body {
   text-rendering: optimizeSpeed;
 
   line-height: 1.5;
+  overflow: hidden;
 
-  padding: 10px;
+  padding: 0;
   margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Nunito Sans", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 
+  color: #1b1b1b;
   background-color: #e1e1e1;
 }
 
@@ -53,27 +56,9 @@ select {
 #root {
   display: grid;
   grid-template-columns: auto 1fr;
-}
-
-.contacts-section {
   height: 100vh;
-  padding: 2rem 1rem;
 
-  overflow-y: hidden;
-}
-
-.contacts-section header {
-  padding: 0.5rem 0;
-
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
-
-  border-bottom: 1px solid #1b1b1b;
-}
-
-.contacts-list > li + li {
-  border-top: 1px solid #cbcbcb;
+  overflow: auto;
 }
 
 /* WRAPPER CARD */
