--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -26,6 +26,12 @@ body {
   background-color: #e1e1e1;
 }
 
+h1,
+h2,
+h3 {
+  font-weight: normal;
+}
+
 /* Inherit fonts for inputs and buttons */
 input,
 button,
@@ -110,7 +116,6 @@ select {
 /* CARD - PERSON DETAILS */
 .contact-card p {
   color: #1b1b1b;
-  font-weight: bold;
 
   margin: 0;
 
@@ -130,7 +135,7 @@ select {
   width: 100%;
   color: #1b1b1b;
 
-  border: 0;
+  border: 1px solid #d6d6d6;
   border-radius: 50px;
   background: #e0e0e0;
   box-shadow: inset 10px 10px 40px #b3b3b3, inset -10px -10px 40px #ffffff;
