--- a/src/styles/contactAdd.css
+++ b/src/styles/contactAdd.css
@@ -22,23 +22,23 @@
     "action action" auto /
     1fr 1fr;
 }
-.third-page-form {
-  display: grid;
-  grid-template:
-    "name username" auto
-    "email mobile" auto
-    "social action" auto /
-    1fr 1fr;
-}
 
 /* PAGE HEADER */
 .contact-add-header {
   text-align: center;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="tel"] {
+/* Icons */
+section > span {
+  color: #888888;
+
+  position: absolute;
+  top: 1.7rem;
+  left: 2rem;
+}
+
+/* SECTION ANIMATION OF SCALE AND SHADOW */
+.bar-input {
   width: 100%;
   height: 45px;
 
@@ -53,19 +53,13 @@ input[type="tel"] {
   border: 0;
   border-radius: 50px;
   background: #e0e0e0;
+  -webkit-appearance: none;
+  -moz-box-shadow: 10px 10px 20px #cacaca, -10px -10px 20px #f6f6f6;
+  -webkit-box-shadow: 10px 10px 20px #cacaca, -10px -10px 20px #f6f6f6;
   box-shadow: 10px 10px 20px #cacaca, -10px -10px 20px #f6f6f6;
+
+  transition: ease box-shadow 0.2s;
 }
-
-/* Icons */
-section > span {
-  color: #888888;
-
-  position: absolute;
-  top: 1.7rem;
-  left: 2rem;
-}
-
-/* SECTION ANIMATION OF SCALE AND SHADOW */
 .section-bar-input {
   padding: 1rem;
   position: relative;
@@ -74,9 +68,6 @@ section > span {
 }
 .section-bar-input:hover {
   scale: 1.05;
-}
-.bar-input {
-  transition: ease box-shadow 0.2s;
 }
 .section-bar-input:hover > .bar-input {
   box-shadow: 5px 5px 10px #cacaca, -5px -5px 10px #f6f6f6;
@@ -188,6 +179,13 @@ input:checked + .slider:before {
   grid-area: remarks;
 }
 
+/* Third Page --------------------------- */
+.third-page-form h2 {
+  grid-area: header;
+  text-align: center;
+  margin-top: 0;
+}
+
 /* All Pages */
 .sec-actions {
   grid-area: action;
@@ -218,6 +216,7 @@ input:checked + .slider:before {
 .cancel-btn:hover,
 .continue-btn:hover,
 .create-btn:hover {
+  cursor: pointer;
   filter: brightness(92%);
 }
 .cancel-btn:active,
