--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -80,6 +80,7 @@ select {
   flex-flow: column;
 
   width: 200px;
+  height: 240px;
   padding: 1rem;
   z-index: 1;
 
@@ -149,7 +150,7 @@ select {
 .contact-card .view-btn:active {
   filter: brightness(88%);
 }
-/* CARD - EDIT BUTTON */
+/* CARD - ACTION BUTTON */
 .contact-card .edit-btn {
   display: flex;
   scale: 0;
@@ -177,6 +178,23 @@ select {
   cursor: pointer;
   scale: 1;
 }
+/* CARD - INPUTS */
+.contact-card input {
+  outline: none;
+
+  padding: 0 1rem;
+
+  /* Ellipsis overflow */
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+
+  border: 0;
+  border-radius: 50px;
+  background: #e0e0e0;
+  -webkit-appearance: none;
+  box-shadow: inset 20px 20px 40px #bebebe, inset -20px -20px 40px #ffffff;
+}
 
 /* ADD CARD */
 .contact-card-add {
@@ -187,6 +205,7 @@ select {
   scale: 0.8;
 
   min-height: 250px;
+  max-width: 200px;
 
   border-radius: 50px;
   background: #e0e0e0;
@@ -196,6 +215,7 @@ select {
   transition: ease-in box-shadow 0.2s, ease filter 0.1s;
 }
 .contact-card-add:hover {
+  cursor: pointer;
   box-shadow: 11px 11px 50px #bebebe, -11px -11px 50px #ffffff;
   /* HOVER ON, add delay */
   transition: ease-out box-shadow 0.2s 0.2s, ease filter 0.1s;
