--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -94,6 +94,7 @@ select {
   z-index: 1;
   scale: 1.05;
 }
+
 /* CARD - PERSON NAME */
 .contact-card h3 {
   text-align: center;
@@ -110,10 +111,12 @@ select {
   overflow: hidden;
   white-space: nowrap;
 }
+
 /* CARD - LABELS */
 .contact-card span {
   color: #868686;
 }
+
 /* CARD - PERSON DETAILS */
 .contact-card p {
   color: #1b1b1b;
@@ -128,6 +131,7 @@ select {
 .contact-card p:last-of-type {
   margin-bottom: 1rem;
 }
+
 /* CARD - VIEW BUTTON */
 .contact-card .view-btn {
   margin-top: auto;
@@ -150,6 +154,7 @@ select {
 .contact-card .view-btn:active {
   filter: brightness(88%);
 }
+
 /* CARD - ACTION BUTTON */
 .contact-card .edit-btn {
   display: flex;
@@ -178,6 +183,7 @@ select {
   cursor: pointer;
   scale: 1;
 }
+
 /* CARD - INPUTS */
 .contact-card input {
   outline: none;
@@ -226,6 +232,7 @@ select {
 .contact-card-add:active {
   filter: brightness(92%);
 }
+
 /* ADD CARD - INNER EFFECT DIV */
 .contact-card-add .inner {
   display: flex;
@@ -248,6 +255,7 @@ select {
   /* HOVER ON, no delay */
   transition: ease-in box-shadow 0.2s;
 }
+
 /* ADD CARD - H2 PLUS */
 .contact-card-add .inner h2 {
   margin: 0;
@@ -258,11 +266,41 @@ select {
 }
 
 /* VIEW SECTION */
-
 .view-section {
   padding: 2rem 0;
 }
 
 .address-card h2 {
   font-size: 1.15rem;
+}
+
+/* PROFILE BUTTON */
+.profile-button {
+  cursor: pointer;
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 46px;
+  width: 46px;
+  margin: 1rem;
+  background-color: #e0e0e0;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 50%;
+}
+.profile-button img {
+  position: absolute;
+  border-radius: 50%;
+  transition: ease filter 0.1s;
+}
+.profile-button span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.profile-button:hover {
+}
+.profile-button:hover img {
+  filter: opacity(0);
 }
