--- a/src/styles/authForms.css
+++ b/src/styles/authForms.css
@@ -10,12 +10,28 @@
   display: flex;
   flex-direction: column;
   width: 50vw;
+  padding: 0;
+  margin-bottom: 1rem;
 }
 
 /* Submit button */
-.authForms-main form button {
-  cursor: pointer;
+.authForms-main form section {
+  display: flex;
   width: 100%;
+}
+.authForms-main form section button {
+  cursor: pointer;
+  height: 50px;
+  width: 100px;
+  margin: 1rem auto 1rem auto;
+  color: #1b1b1b;
+
+  border: 0;
+  border-radius: 20px;
+  background: #e0e0e0;
+  box-shadow: 10px 10px 20px #b3b3b3, -10px -10px 20px #ffffff;
+
+  transition: ease filter 0.1s;
 }
 
 /* Error popup */
