--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -30,6 +30,7 @@ h1,
 h2,
 h3 {
   font-weight: normal;
+  text-align: center;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -301,4 +302,40 @@ select {
 }
 .profile-button:hover img {
   filter: opacity(0);
+}
+
+/* Error popup */
+.error-popup-div {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  right: 0;
+  bottom: 0;
+  z-index: 2000;
+
+  padding: 0 1rem;
+  margin: 1rem;
+
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background-color: #e1e1e1;
+  border-top: 20px solid tomato;
+  border-radius: 1rem;
+}
+.error-popup-div h1 {
+  margin: 0;
+}
+.error-popup-div button {
+  cursor: pointer;
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: 6px 6px 12px #cacaca, -6px -6px 12px #f6f6f6;
+  border: 0;
+  margin: 1rem 0;
+  transition: ease filter 0.2s;
+}
+.error-popup-div button:hover {
+  filter: brightness(92%);
+}
+.error-popup-div button:active {
+  filter: brightness(88%);
 }
