--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -377,3 +377,43 @@ select {
 .contact-edit-grid .sec-meetings-edit {
   grid-area: meetings;
 }
+
+.navigation-rail {
+  padding: 1rem;
+}
+.navigation-rail ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  gap: 1.5rem;
+}
+.navigation-rail li {
+  cursor: pointer;
+  padding: 0.5rem;
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: 7px 7px 14px #929292, -7px -7px 14px #ffffff;
+  transition: ease filter 0.2s;
+}
+.navigation-rail li:hover {
+  filter: brightness(92%);
+}
+.navigation-rail li:active {
+  filter: brightness(88%);
+}
+.navigation-rail .link {
+  text-decoration: none;
+  color: #1b1b1b;
+}
+
+.about-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.about-main ul {
+  padding: 0;
+  font-size: larger;
+}
