fixed the login and register forms to have icons

--- a/src/styles/authForms.css
+++ b/src/styles/authForms.css
@@ -6,12 +6,13 @@
 }
 
 /* Div in Form */
-.authForms-main form div {
-  display: flex;
-  flex-direction: column;
-  width: 50vw;
+.authForms-main .section-bar-input {
   padding: 0;
   margin-bottom: 1rem;
+}
+.authForms-main .section-bar-input span {
+  left: 0.8rem;
+  top: 0.7rem;
 }
 
 /* Labels */
